# inference-server

./: .gitignore  Dockerfile  docker-build.sh  docker-run.sh
app/: pyproject.toml
app/app/: main.py
app/app/ai/: models.py
app/app/ai/emotion_analysis/: label.json
app/app/ai_models/: emotion_classifier.py  retriever.py
app/app/api/v1/: api.py  handlers.py
app/app/api/v1/endpoints/: exceptions.py  inference.py  items.py
app/app/core/: config.py  logger.py
app/app/core/env/: .env  dev.env
app/app/data/: base.py  emotion_vectors.py  lyrics.py
app/app/schemas/: __init__.py  emotion.py  item.py  recommendation.py  song.py  user_request.py
app/scripts/: lint.sh  test-cov-html.sh  test.sh
