[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["SeongIkKim <kpic1638@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
isort = "^5.10.1"
fastapi = "^0.74.1"
pydantic = "^1.9.0"
black = "^22.1.0"
mypy = "^0.931"
uvicorn = "^0.17.5"
python-dotenv = "^0.19.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# lint
[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 120

[tool.black]
line-length = 120

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
mypy_path = "app"
